added webkit property in css for footer text background-clip

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,7 @@
     display: inline-block;
     background: linear-gradient(to right, $very-dark-magenta, $soft-pink);
     background-clip: text;
+    -webkit-background-clip: text;
     color: transparent;
     font-size: 1.2em;
     font-weight: $font-weight-bold;
