--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,6 +4,8 @@
     text-align: center;
     font-weight: $font-weight-medium;
     color: $dark-grayish-magenta;
+    animation: slideInRight 1s ease-in-out 5s backwards;
+    animation: name duration timing-function delay iteration-count direction fill-mode;
 }
 
 .attribution a {
