--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,3 @@
-
 // _______________COLORS
 
 // Primary
@@ -14,7 +13,7 @@ $black: hsl(0, 0%, 0%);
 
 // Fonts
 $default-font-size: 1.5rem;
-$font-family: 'Spartan', sans-serif;
+$font-family: "Spartan", sans-serif;
 $font-weight-regular: 400;
 $font-weight-medium: 500;
 $font-weight-bold: 700;
